tests/flow_errors/flow_not_found/error.txt
Error: 
    1 | deploy flow broken from snot::badger
      |             ^^^^^^ Artefact `snot::badger` is not defined or not found, the following are defined: